crates/pardosa-genome/tests/compile_fail/evt_013.stderr
error: EVT-013: GenomeSafe: function pointers (fn(..) -> ..) carry process-local addresses with no portable wire representation. Encode the action as data (e.g. an enum tag) instead.
 --> tests/compile_fail/evt_013.rs:7:8
  |
7 |     f: fn(u32) -> u32,
  |        ^^^^^^^^^^^^^^

error[E0277]: the trait bound `fn(u32) -> u32: serde::Serialize` is not satisfied
 --> tests/compile_fail/evt_013.rs:5:10
  |
5 | #[derive(Serialize, GenomeSafe)]
  |          ^^^^^^^^^ the trait `Serialize` is not implemented for `fn(u32) -> u32`
6 | struct BadStruct {
7 |     f: fn(u32) -> u32,
  |     - required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `fn(u32) -> u32` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
note: required by a bound in `_serde::ser::SerializeStruct::serialize_field`
 --> $CARGO/serde_core-$VERSION/src/ser/mod.rs
  |
  |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
  |        --------------- required by a bound in this associated function
  |     where
  |         T: ?Sized + Serialize;
  |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
